--- a/form2database/views/form.ejs
+++ b/form2database/views/form.ejs
@@ -3,9 +3,101 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add User</title>
+    <title>Employee Form</title>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h3>Add User Form</h3>
+    <div class="container">
+      <h1 class="mt-5">Employee Form</h1>
+      <form action="/submit" method="POST" class="mt-4">
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="firstName">First Name:</label>
+            <input
+              type="text"
+              id="firstName"
+              name="firstName"
+              class="form-control"
+              required
+            />
+          </div>
+          <div class="form-group col-md-6">
+            <label for="lastName">Last Name:</label>
+            <input
+              type="text"
+              id="lastName"
+              name="lastName"
+              class="form-control"
+              required
+            />
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-md-4">
+            <label for="department">Department:</label>
+            <input
+              type="text"
+              id="department"
+              name="department"
+              class="form-control"
+              required
+            />
+          </div>
+          <div class="form-group col-md-4">
+            <label for="jobTitle">Job Title:</label>
+            <input
+              type="text"
+              id="jobTitle"
+              name="jobTitle"
+              class="form-control"
+              required
+            />
+          </div>
+          <div class="form-group col-md-4">
+            <label for="salary">Salary:</label>
+            <input
+              type="number"
+              id="salary"
+              name="salary"
+              class="form-control"
+              required
+            />
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="startDate">Start Date:</label>
+            <input
+              type="date"
+              id="startDate"
+              name="startDate"
+              class="form-control"
+              required
+            />
+          </div>
+          <div class="form-group col-md-6">
+            <label for="endDate">End Date:</label>
+            <input
+              type="date"
+              id="endDate"
+              name="endDate"
+              class="form-control"
+              required
+            />
+          </div>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
