--- a/form2database/views/userAdded.ejs
+++ b/form2database/views/userAdded.ejs
@@ -13,6 +13,8 @@
     <div class="container">
       <h1 class="mt-5">User Has Been Successfully Added</h1>
       <br />
+
+      <a href="/"><button>Return Home</button></a>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
