--- a/mysqllogin/views/login-form.ejs
+++ b/mysqllogin/views/login-form.ejs
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="mt-5">Employee Form</h1>
+      <h1 class="mt-5">Employee Login</h1>
       <form action="/submit" method="POST" class="mt-4">
         <div class="form-row">
           <div class="form-group col-md-4">
