--- a/mysqllogin/views/login-success.ejs
+++ b/mysqllogin/views/login-success.ejs
@@ -14,6 +14,7 @@
       <h1 class="mt-5">User Has Been Successfully Added</h1>
       <br />
 
+      <a href="/employees"><button>List of Employees</button></a>
       <a href="/"><button>Return Home</button></a>
     </div>
 
